Initial implementation of the extensions feature. Allow extensions to be added programmatically and also provide an extension scanner, so extensions can be discovered and added to the system. Extensions can alter/add any type and also act on lists.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "prana",
     "framework"
   ],
+  "dependencies": {
+    "async": "0.2.x"
+  },
   "main": "prana",
   "repository": "git://github.com/recidive/prana"
 }
