--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prana",
-  "version": "0.0.4",
-  "description": "Prana Micro Framework",
+  "version": "0.0.5",
+  "description": "Prana Microframework",
   "keywords": [
     "prana",
     "framework"
